--- a/Papers/ICCC-2023/sections/introduction.tex
+++ b/Papers/ICCC-2023/sections/introduction.tex
@@ -1,19 +1,19 @@
 \section{Introduction}
 
 
-Compile-time function execution (CTFE) is an aspect of a programming language, that allows the programmer to execute code at compile-time.
-It has been gaining popularity with low level programming langauges such as Rust \cite{rust} or C++ \cite{ISO:cpp98}.
-The goals and capabilities of CTFE depend on the language and are discussed in chapter \ref{related-work}.
+Compile-time function execution (CTFE) is an aspect of a programming language, that allows the programmer to execute code at compile-time. 
+It has been gaining popularity with low level programming languages such as Rust \cite{rust} or C++ \cite{ISO:cpp98}.
+The goals and capabilities of CTFE depend on the language and are discussed in details in chapter \ref{related-work}.
 
-In this paper a new approach to compiler construction that places Compile Time Function Execution capabilities as the first priority is proposed.
-This architecture is called CTFEF: Compile Time Function Execution First.
-CTFEF builds the compiler around the interpreter component.
-The role of the compiler is to construct the semantic model of the program being compiled and pass it as data to the interpreted Compiler-Intreface module.
-Compiler-Interface then tranforms the model into the backend's assembly language to be compiled to executable.
-This approach was created during implementation of a compiler for C-=-1, a new language that prioritized static metaprogramming.
+In this paper a new approach to compiler construction that places Compile Time Function Execution capabilities as the first priority is proposed. 
+This architecture is called CTFEF: Compile Time Function Execution First. CTFEF builds the compiler around the interpreter component. 
+The role of the compiler is to construct the semantic model of the program being compiled and pass it as data to the interpreted Compiler-Interface module. 
+Compiler-Interface then transforms the model into the assembly language to be compiled into executable. 
+This approach was created during implementation of the compiler for C-=-1, a new language that prioritizes static metaprogramming. 
 The design of that language is described in chapter \ref{language-design}.
-Chapter \ref{compiler-design} describes the structure of a CTFEF compiler and how its components interact.
+Related work is briefly shown in chapter \ref{related-work}.
+In chapter \ref{compiler-design} the structure of a CTFEF compiler and interactions among its components are presented. 
 
-Using CTFEF approach carries with it certain unique implementation considerations.
-Data structures used within the compiler and the way that the program is modeled is tightly coupled with the compiled language.
-These challenges, as well as how they were solved in C-=-1 compiler are described in chapter \ref{implementation}.
+
+Using CTFEF approach causes many implementation difficulties. Data structures used within the compiler are tightly coupled with the compiled language. 
+These problems and how they were solved in C-=-1 compiler are described in chapter \ref{implementation}.
