FUCK THIS FUCKING SHIT. I AM FUCKING DONE

--- a/Papers/ICCC-2023/bibliography.bib
+++ b/Papers/ICCC-2023/bibliography.bib
@@ -67,6 +67,15 @@
   pages      = {7–87},
   numpages   = {81}
 }
+@incollection{vermeir2022net,
+  title     = {.NET Compiler Platform},
+  author    = {Vermeir, Nico},
+  booktitle = {Introducing .NET 6},
+  pages     = {275--295},
+  year      = {2022},
+  publisher = {Springer},
+  doi       = {10.1007/978-1-4842-7319-7_10}
+}
 
 @article{becker2007:type_erasure,
   title     = {Type erasure in C++: The glue between object oriented and generic programming},
@@ -98,11 +107,27 @@
   numpages  = {3}
 }
 
+@incollection{balliauw2013nuget,
+  title     = {NuGet Package Manager Console PowerShell Reference},
+  author    = {Balliauw, Maarten and Decoster, Xavier},
+  booktitle = {Pro NuGet},
+  pages     = {331--338},
+  year      = {2013},
+  publisher = {Springer}
+}
+
+@mastersthesis{slimaksource,
+  title  = {Source Generators in C\#},
+  author = {SLIM{\'A}K, BC OND{\v{R}}EJ and Pelik{\'a}n, RNDr Jaroslav},
+  year   = {2022},
+  city   = {Brno},
+  school = {Department of Computer Systems and Communications, Masaryk University}
+}
+
 @book{hsu2021llvm,
   title     = {LLVM Techniques, Tips, and Best Practices Clang and Middle-End Libraries: Design powerful and reliable compilers using the latest libraries and tools from LLVM},
   author    = {Hsu, M.Y.},
   isbn      = {9781838829728},
-  url       = {https://books.google.pl/books?id=g\_wqEAAAQBAJ},
   year      = {2021},
   publisher = {Packt Publishing}
 }
