--- a/Papers/ICCC-2023/c-=-1.tex
+++ b/Papers/ICCC-2023/c-=-1.tex
@@ -91,7 +91,10 @@
 %% appropriate command.
 %% Many elements are not rendered, but should be provided for metadata
 %% extraction tools.
-
+\lstset{
+	tabsize=2,
+	breakatwhitespace
+}
 %% Author with single affiliation.
 \author{Adam Grabski}
 %\authornote{with author1 note}          %% \authornote is optional;
@@ -154,7 +157,7 @@
 
 %% Keywords
 %% comma separated list
-\keywords{compiler, interpreter, metaprogramming}  %% \keywords are mandatory in final camera-ready submission
+\keywords{compiler, Interpreter, metaprogramming}  %% \keywords are mandatory in final camera-ready submission
 
 
 %% \maketitle
