--- a/Papers/ICCC-2023/sections/conclusions.tex
+++ b/Papers/ICCC-2023/sections/conclusions.tex
@@ -7,12 +7,12 @@ These goals are significantly easier to accomplish, thanks to the access to sema
 Authors of language tools do not need to analyze the user program.
 
 On the other hand, using CTFEF approach has some drawbacks. Implementing a compiler is more difficult.
-Since a significant part of the compiler is interpreted, developing it means working with worse tooling and less mature ecosystem.
-This makes wirting the code as well as debugging it significantly more difficult.
-However, this drawback also means that work on the compiler in the target language may start as early as stage 0 of compiler bootstraping\cite{puntambekar:compiler_design, novillo2007gcc}.
+Since a significant part of the compiler is interpreted, the initial implementation requires working with the target language.
+The lack of available tools, such as integrated development environments, debuggers and libraries makes this part of the process significantly more difficult.
+On the other hand also means that work on the compiler in the target language may start at the very beginning of compiler bootstrapping process\cite{puntambekar:compiler_design, novillo2007gcc}.
 
-The compiler created for C-=-1, has unaceptable performance, as noted by the original C-=-1 paper \cite{grabski2022compilation}.
-Compiling the C-=-1 standard library, containing around 200 lines of code, takes aproximatley 10 minutes.
+The compiler created for C-=-1, has unacceptable performance, as noted by the original C-=-1 paper \cite{grabski2022compilation}.
+Compiling the C-=-1 standard library, containing around 200 lines of code, takes approximately 10 minutes.
 Majority of that time is spent on interpreting the compiler interface.
 This is a significant barrier to adopting CTFEF approach.
 Since the compiler implemented for C-=-1 was made as a research tool with minimal effort, further work is needed to explore the performance issues of CTFEF approach.
